# prompt-optimizer-app

./: .gitignore  docker-compose.yml
.claude/: launch.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/engine/: auto_eval.py  comparator.py  goal_builder.py  kb_builder.py  models.py  optimizer.py  prompt_gen.py  rag.py  research.py  runner.py  system_docs.py
backend/app/routers/: compare.py  documents.py  evaluate.py  export.py  knowledge_base.py  optimize.py  projects.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: layout.tsx  page.tsx
frontend/src/app/projects/[id]/documents/: page.tsx
frontend/src/app/projects/[id]/evaluate/: page.tsx
frontend/src/app/projects/[id]/knowledge-base/: page.tsx
frontend/src/app/projects/[id]/optimize/: page.tsx
frontend/src/app/projects/[id]/setup/: page.tsx
frontend/src/components/: eval-config.tsx  file-upload.tsx  model-badge.tsx  processing-banner.tsx  prompt-editor.tsx  score-card.tsx  terminal-output.tsx  wizard-stepper.tsx
frontend/src/lib/: api.ts
